@@ -8,6 +8,7 @@ import com.bookshop.features.book.api.response.SubcategoryResponse;
 import com.bookshop.features.book.domain.service.port.CategoryService;
 import com.bookshop.features.book.mapper.CategoryMapper;
 import com.bookshop.features.book.mapper.SubcategoryMapper;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -16,7 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @RestController
@@ -29,22 +29,26 @@ public class CategoryController {
     public ResponseEntity<List<CategoryResponse>> getCategories() {
         return new ResponseEntity<>(
                 categoryService.getCategories()
-                        .stream().map(CategoryMapper::mapToCategoryResponse)
-                        .collect(Collectors.toList()),
+                        .stream()
+                        .map(CategoryMapper::mapToCategoryResponse)
+                        .toList(),
                 HttpStatus.OK);
     }
 
     @PreAuthorize("hasAuthority('ADMIN')")
     @Transactional
     @PostMapping
-    public ResponseEntity<CategoryResponse> saveCategory(@RequestBody SaveCategoryRequest request) {
+    public ResponseEntity<CategoryResponse> saveCategory(@RequestBody @Valid SaveCategoryRequest request) {
         return new ResponseEntity<>(
-                CategoryMapper.mapToCategoryResponse(categoryService.saveCategory(CategoryMapper.mapSaveCategoryRequestsToCategoryEntity(request))
-                ), HttpStatus.CREATED);
+                CategoryMapper.mapToCategoryResponse(
+                        categoryService.saveCategory(CategoryMapper.mapSaveCategoryRequestsToCategoryEntity(request))
+                ),
+                HttpStatus.CREATED
+        );
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<CategoryResponse> getCategory(@PathVariable Integer id){
+    public ResponseEntity<CategoryResponse> getCategory(@PathVariable Integer id) {
         return ResponseEntity.ok(
                 CategoryMapper.mapToCategoryResponse(categoryService.getCategory(id))
         );
@@ -52,10 +56,11 @@ public class CategoryController {
 
     @Transactional
     @PostMapping("/{id}/subcategories")
-    public ResponseEntity<SubcategoryResponse> saveSubcategory(@PathVariable int id, @RequestBody SaveSubcategoryRequest request){
+    public ResponseEntity<SubcategoryResponse> saveSubcategory(@PathVariable int id, @RequestBody @Valid SaveSubcategoryRequest request) {
         return new ResponseEntity<>(
-                SubcategoryMapper.mapToSubcategoryResponse(categoryService.saveSubcategory(id, request))
-        , HttpStatus.CREATED);
+                SubcategoryMapper.mapToSubcategoryResponse(categoryService.saveSubcategory(id, request)),
+                HttpStatus.CREATED
+        );
     }
 
 }
